bindata/assets/kube-descheduler/softtainterdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "softtainter"
  namespace: "openshift-kube-descheduler-operator"
  labels:
    app: "softtainter"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "softtainter"
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: openshift-softtainter
        openshift.io/required-scc: restricted-v2
      labels:
        app: "softtainter"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: "policy-volume"
          configMap:
            name: "descheduler"
        - name: certs-dir
          secret:
            secretName: kube-descheduler-serving-cert
      priorityClassName: "system-cluster-critical"
      restartPolicy: "Always"
      containers:
        - name: "openshift-softtainter"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          image: ${SOFTTAINTER_IMAGE}
          terminationMessagePolicy: FallbackToLogsOnError
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /livez
              port: 6060
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /readyz
              port: 6060
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
          command: ["/usr/bin/soft-tainter"]
          args:
            - --policy-config-file=/policy-dir/policy.yaml
          volumeMounts:
            - mountPath: "/policy-dir"
              name: "policy-volume"
            - mountPath: "/certs-dir"
              name: certs-dir
      serviceAccountName: "openshift-descheduler-softtainter"
