bindata/assets/kube-descheduler/networkpolicy-allow-operand.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: descheduler-operand-allow
  namespace: openshift-kube-descheduler-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
spec:
  podSelector:
    matchLabels:
      app: descheduler
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              openshift.io/cluster-monitoring: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-user-workload-monitoring
      ports:
        - protocol: TCP
          port: 10258
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
