bindata/assets/kube-descheduler/networkpolicy-allow-softtainter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: descheduler-softtainter-allow
  namespace: openshift-kube-descheduler-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
spec:
  podSelector:
    matchLabels:
      app: softtainer
  ingress:
    - ports:
        - protocol: TCP
          port: 6060
  egress:
    - {}
  policyTypes:
    - Ingress
    - Egress
